Changes for 2.5.1

New features:
A.F.I..PS. [ZBXNEXT-1241] added host inventory mode setting for new and discovered hosts (wiper, Gunars, Sasha)
...G...... [ZBXNEXT-494] added support for proc.cpu.util key on linux and solaris platforms (wiper)
A.F....... [ZBX-1357] updated Czech and Japanese translations; thanks to Zabbix translators (Richlv)

Bug fixes:
..F....... [ZBX-9516] fixed "Go" button display after deleting applications (Gunars)
..F....... [ZBX-9639] fixed chart width validation (Gunars)
........S. [ZBX-9729] fixed replacement of {MACRO<1-9>} with {MACRO} where only {MACRO} is acceptable (gleb, wiper)
..F....... [ZBX-9809] fixed action operation validation (Gunars)
........S. [ZBX-9814] fixed function prototype declaration created in ZBXNEXT-2760 (wiper)
...G...... [ZBX-9716] fixed possible event record number wraparound issues in the old Windows Eventing support (wiper)
...G...... [ZBX-9258] fixed Alias for log[], logrt[] and eventlog[] (gleb)

--------------------------------------------------------------------------------
Changes for 2.5.0

New features:
..F....... [ZBXNEXT-2703] implemented feature to filter dashboard by trigger name (Ivo)
A.F.I...S. [ZBXNEXT-2892] increased IP range length and added support for tabulation, carriage return and newline characters (Ivo, wiper)
........S. [ZBXNEXT-2760] added zabbix[host,,items] and zabbix[host,,items_unsupported] keys to monitor the number of (unsupported) items per host (wiper)
A.F.I..PS. [ZBXNEXT-1219] added application prototype support to low level discovery rules (Ivo, wiper)
........S. [ZBX-4344] added functionality to stop processing escalations if dependent trigger fires (dimir)
ADF.I..PS. [ZBXNEXT-679] implemented SMTP authentication support (asaveljevs, Oleg)
..FGI..... [ZBXNEXT-1368] added Windows service discovery and service.info[] item; thanks to Ryan Armstrong for patch (asaveljevs, igors)