@@ -1,6 +1,7 @@
 Changes for 2.5.1
 
 New features:
+..F....... [ZBXNEXT-210] changed macros type labels in template configuration form (Gunars)
 A.F.I..PS. [ZBXNEXT-1241] added host inventory mode setting for new and discovered hosts (wiper, Gunars, Sasha)
 ...G...... [ZBXNEXT-494] added support for proc.cpu.util key on linux and solaris platforms (wiper)
 A.F....... [ZBX-1357] updated Czech and Japanese translations; thanks to Zabbix translators (Richlv)
